--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
-	height: 100vh;
 	background-color: #321743; /* Cor de fundo inicial para Pomodoro */
 	margin: 0;
 	transition: background-color 0.3s ease;
@@ -21,12 +20,14 @@ body {
 .container-principal {
 	max-width: 1200px;
 	margin: 0 auto;
+	padding: 20px;
 }
 
 .titulo {
 	color: #ffffff;
 	font-size: 2em;
-	margin-bottom: 100px;
+	margin: 100px 0px;
+	text-align: center;
 }
 
 .principal {
@@ -188,4 +189,48 @@ body.pausa-longa .tabs {
 
 .explicacao p {
 	margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+	.principal {
+		flex-direction: column;
+	}
+
+	.titulo {
+		font-size: 1em;
+		margin-top: 20px;
+	}
+
+	.container {
+		width: 100%;
+		margin-left: 0;
+		margin-right: 0;
+		border-radius: 0;
+	}
+
+	.tabs {
+		border-radius: 0;
+	}
+
+	.historico {
+		margin-top: 20px;
+		margin-left: 0;
+		width: 100%;
+	}
+
+	.explicacao {
+		margin-top: 20px;
+		width: 100%;
+		padding: 10px;
+	}
+
+	.titulo {
+		font-size: 1.5em;
+		margin-bottom: 50px;
+		text-align: center;
+	}
+
+	.timer h1 {
+		font-size: 3em;
+	}
 }
